<resources>
    <string name="app_name">Memory App</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="previous_score">Previous Score</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_4">4.</string>
    <string name="_3">3.</string>
    <string name="_5">5.</string>
    <string name="high_scores">High Scores</string>
    <string name="main_menu">Main Menu</string>
    <string name="how_to_play">How to play</string>
    <string name="scores">Scores</string>
    <string name="difficulty">Difficulty</string>

</resources>
